cmake_minimum_required(VERSION 3.5)

project(RecipeBook VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)


set(PROJECT_SOURCES
        main.cpp
        mainwindow.cpp
        mainwindow.h
        mainwindow.ui
        recipe.h
        recipe.cpp
        IncorrectInputException.cpp
        ingredient.h
        ingredient.cpp
        global.h
        incorrectinputexceptionwindow.h
        incorrectinputexceptionwindow.cpp
        incorrectinputexceptionwindow.ui
        image.qrc
        addallergenwindow.cpp
        addallergenwindow.h
        addallergenwindow.ui
        addingredientwindow.cpp
        IncorrectInputException.h
        addingredientwindow.h
        addingredientwindow.ui
        createrecipewindow.cpp
        createrecipewindow.h
        createrecipewindow.ui
        basefooditem.h
        allergen.cpp
        allergen.h
        editrecipewindow.cpp
        editrecipewindow.h
        editrecipewindow.ui
    )

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(RecipeBook
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
# Define target properties for Android with Qt 6 as:
#    set_property(TARGET RecipeBook APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(RecipeBook SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(RecipeBook
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(RecipeBook PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

set_target_properties(RecipeBook PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

install(TARGETS RecipeBook
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(RecipeBook)
endif()
